# python-pandas-bedrock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/pandas_bedrock/: __init__.py  base.py  bedrock.py  utils.py
src/pandas_bedrock/models/: base.py
src/pandas_bedrock/prompts/: base.py  claude.py
tests/: conftest.py  test_base.py
