[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas_bedrock"
version = "0.0.4"
authors = [
    { name = "kongrawd", email = "45740187+kongrawd@users.noreply.github.com" },
]
description = "Integrate Amazon Bedrock functionality with Pandas in Python."
readme = "README.md"
keywords = ["pandas", "bedrock"]
requires-python = ">=3.11.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas>=2.2.1", "boto3>=1.34.60", "botocore>=1.34.78"]

[project.optional-dependencies]
dev = ["pytest>=8.1.1"]
